@@ -1,0 +1,4 @@
+Verifi Gateway
+
+* Created by Paul Hepworth on 2007-05-12.
+* Portions of Verifi Gateway Copyright (c) 2007 Paul Hepworth
