@@ -22,3 +22,4 @@ require 'active_merchant/billing/gateways/quickpay'
 require 'active_merchant/billing/gateways/realex'
 require 'active_merchant/billing/gateways/secure_pay'
 require 'active_merchant/billing/gateways/trans_first'
+require 'active_merchant/billing/gateways/verifi'
